# substrate-subxt

./: Cargo.toml
client/: Cargo.toml
proc-macro/: Cargo.toml
test-node/: Cargo.toml
test-node/runtime/: Cargo.toml
