[workspace]
members = [".", "proc-macro"]

[package]
name = "substrate-subxt"
version = "0.10.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
log = "0.4.8"
thiserror = "1.0.20"
futures = "0.3.5"
jsonrpsee = { version = "0.1.0", features = ["ws"] }
num-traits = { version = "0.2.12", default-features = false }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
url = "2.1.1"
codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"] }

frame-metadata = { git = "https://github.com/paritytech/substrate" }
frame-support = { git = "https://github.com/paritytech/substrate" }
sp-runtime = { git = "https://github.com/paritytech/substrate" }
sp-version = { git = "https://github.com/paritytech/substrate" }
pallet-indices = { git = "https://github.com/paritytech/substrate" }
hex = "0.4.2"
sp-rpc = { git = "https://github.com/paritytech/substrate" }
sp-core = { git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate" }
substrate-subxt-proc-macro = { version = "0.9.0", path = "proc-macro" }

[dev-dependencies]
async-std = { version = "^1.6.2", features = ["attributes"] }
env_logger = "0.7.1"
wabt = "0.9.2"
frame-system = { git = "https://github.com/paritytech/substrate" }
pallet-balances = { git = "https://github.com/paritytech/substrate" }
sp-keyring = { git = "https://github.com/paritytech/substrate" }
tempdir = "0.3.7"
