[package]
name = "test-node"
version = "2.0.0"
authors = ["Anonymous"]
description = "Substrate Node template"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.5"
log = "0.4.11"
structopt = "0.3.16"
parking_lot = "0.11.0"

sc-cli = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch", features = ["wasmtime"] }
sp-core = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" } 
sc-executor = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch", features = ["wasmtime"] }
sc-service = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch", features = ["wasmtime"] }
sp-inherents = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" } 
sc-transaction-pool = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-transaction-pool = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-network = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-consensus-aura = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-consensus-aura = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-consensus = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-consensus = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-finality-grandpa = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-finality-grandpa = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-client-api = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-runtime = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-basic-authorship = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }

test-node-runtime = { path = "runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
